<resources>
    <string name="app_name">Eng. Convert</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="sure">Sure</string>
    <string name="hey_we_are_so_glad_you_are_loving_our_app_we_would_love_your_rating_so_it_can_help_others_make_a_great_choice">Hey! We are so glad you are loving our app. We would love your rating so it can help others make a great choice.</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="constant_symbol">Constant Symbol</string>
    <string name="mad">MAD</string>
    <string name="house">HOUSE</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="conversions">Conversions</string>
    <string name="constants">Constants</string>
    <string name="science_can_amuse_and_fascinate_us_all_but_it_is_engineering_that_changes_the_world_n_isaac_asimov">Science can amuse and fascinate us all, but it is engineering that changes the world. \n\n- Isaac Asimov</string>
</resources>
